@@ -1,3 +1,13 @@
+2018-01-18  Devin Rousso  <webkit@devinrousso.com>
+
+        Web Inspector: Canvas Tab: record button on canvas card doesn't always show on hover, or is misplaced
+        https://bugs.webkit.org/show_bug.cgi?id=179183
+
+        Reviewed by Joseph Pecoraro.
+
+        * UserInterface/Views/CanvasOverviewContentView.css:
+        (.content-view.canvas-overview .content-view.canvas:not(.is-recording) > header > .navigation-bar > .item.record-start-stop): Deleted.
+
 2018-01-17  Devin Rousso  <webkit@devinrousso.com>
 
         Web Inspector: clicking on a path component that has no siblings should select it
